Fresh upload of Landing Page Jekyll theme

--- a/index.html
+++ b/index.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>XNOR Labs</title>
-    </head>
-    <body>
-        <p>Welcome to XNOR Labs</p>
-        <p>Our website is coming soon!</p>
-        <p>Contact us at <a href=mailto:contactus@xnor-labs.com>contactus@xnor-labs.com</a></p>
-    </body>
-</html>
+---
+layout: default
+title: Landing Page
+subTitle: A Template by Start Bootstrap
+---
